--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lyft Flex</title>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/common.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script src="https://use.fontawesome.com/e81f3961b0.js"></script>
@@ -43,6 +43,27 @@
 			<video src="assets/images/hero-video.mp4" type="video/mp4" autoplay muted loop >
 			</video>
 		</div>
+		<!--registro-->
+		<section id="registro" class="flex-container registro-caja">
+			<h2 class="text-uppercase miles mb-0 mt-0">TURNS MILES IN TO MONEY</h2>
+			<h6 class="text-uppercase mb-0 mt-0">SIGN UP TO DRIVE WITH LYFT</h6>
+			<form id="formulario" class="form">
+				<div class="input">
+					<input type="text" maxlength="9" placeholder="Phone number" id="input-number">
+				</div>
+			</form>
+			<div class="btn-a">
+				<button class="btn-driver-class" id="btn-driver">Become a Driver</button>
+				<a href="#" class="sign-up-to-ride">Sign up to ride</a>
+			</div>
+			</ul>
+			<span>
+				<a href="#" class="already">Already applied? Check the status of your application here.</a>
+			</span>
+			<span>
+				<a href="#" class="earn-money">Earn money for inviting friends to drive. Learn more.</a>
+			</span>
+		</section>
 	</main>
 	
 	
