--- a/index.html
+++ b/index.html
@@ -87,8 +87,47 @@
 			</small>
 		</section>
 	</main>
-	
-	
+	<!--información-->
+	<section id="info" class="flex-container">
+		<div class="col-text flex-container">
+			<div class="detalle">
+				<h2 class="text-uppercase">a ride in minutes</h2>
+				<p>Request a ride and you'll be on your way in minutes. Request. Ride. Repeat.</p>
+			</div>
+			<div class="detalle">
+				<h2 class="text-uppercase">serious about safety</h2>
+				<p>From knowing the color of your driver’s car to our 24/7 Trust & Safety Team, we got you.</p>
+			</div>
+			<div class="detalle">
+				<h2 class="text-uppercase">happy drivers. happy riders</h2>
+				<p>Ride with us and you’ll see why 9 out of 10 rides end with five stars.</p>
+			</div>
+		</div>
+		<div class="col-img flex-container">
+			<img src="assets/images/phone.png" alt="#">
+		</div>
+	</section>
+	<!--videos
+	<section class="video-info flex-container">
+		<div class="video-youtube">
+			<iframe width="850" height="500" src="https://www.youtube.com/embed/fLSmUWOYpKw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="amplify-vid">
+			<h5>WATCH</h5>
+			<h2>AMPLIFY YOUR RIDE</h2>
+			<p>Lyft’s new emblem, Amp, is the secret to smooth pickups. Lighting up dashboards nationwide, the device makes it easy for passengers and drivers to find each other.</p>
+		</div>
+		<div>
+			<iframe width="850" height="500" src="https://www.youtube.com/embed/v8nyGzOLsdw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="june">
+			<h5 class="text-uppercase">watch</h5>
+			<h1 class="text-uppercase">june</h1>
+			<p>In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride — and sharing her life, too.</p>
+		</div>
+	</section>	
+	</<main>	
+	-->
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
