--- a/index.html
+++ b/index.html
@@ -107,27 +107,92 @@
 			<img src="assets/images/phone.png" alt="#">
 		</div>
 	</section>
-	<!--videos
-	<section class="video-info flex-container">
-		<div class="video-youtube">
-			<iframe width="850" height="500" src="https://www.youtube.com/embed/fLSmUWOYpKw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+	<!--videos-->
+	<div class="vid-global">
+		<div class="first-vid flex-container">
+			<div class="amplify-text">
+				<h5>WATCH</h5>
+				<h2>AMPLIFY YOUR RIDE</h2>
+				<p>Lyft’s new emblem, Amp, is the secret to smooth pickups. Lighting up dashboards nationwide, the device makes it easy for passengers and drivers to find each other.</p>
+			</div>
+			<div class="video-youtube">
+				<iframe width="850" height="500" src="https://www.youtube.com/embed/fLSmUWOYpKw?ecver=1" frameborder="0" allowfullscreen></iframe>
+			</div>
 		</div>
-		<div class="amplify-vid">
-			<h5>WATCH</h5>
-			<h2>AMPLIFY YOUR RIDE</h2>
-			<p>Lyft’s new emblem, Amp, is the secret to smooth pickups. Lighting up dashboards nationwide, the device makes it easy for passengers and drivers to find each other.</p>
+	<!--videos-->
+		<div class="second-vid flex-container">
+			<div class="showing">
+				<h5 class="text-uppercase">watch</h5>
+				<h1 class="text-uppercase">Showing Up Quick</h1>
+				<p>Request a ride and you’ll be on your way in minutes. Request. Ride. Repeat. Download today, and <a href="#">#RideOnTheBrightSide</a>.</p>
+			</div>
+			<div>
+				<iframe width="850" height="500" src="https://www.youtube.com/embed/xj2VWLV0xCU?ecver=1" frameborder="0" allowfullscreen></iframe>
+			</div>
 		</div>
-		<div>
-			<iframe width="850" height="500" src="https://www.youtube.com/embed/v8nyGzOLsdw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+	</div>
+	<!--pie-->
+	<section class="footer flex-container" id="footer">
+		<div class="row flex-container mt-0">
+			<div class="columna mt-0">
+				<a href="#"><h2 class="text-uppercase mt-0">drive</h2></a>
+				<a href=""><h2 class="text-uppercase mt-0">ride</h2></a>
+				<a href=""><h2 class="text-uppercase mt-0">log in</h2></a>
+				<a href=""><p>Help</p></a>
+				<a href=""><p>Cities</p></a>
+				<a href=""><p>Airports</p></a>
+				<a href=""><p>Fare Estimate</p></a>
+				<a href=""><p>Free Ride Credits</p></a>
+				<a href=""><p>Driver Bonus</p></a>
+				<a href=""><p>Gift Cards</p></a>
+			</div>
+			<div class="columna">
+				<a href=""><h2 class="text-uppercase mt-0">partner</h2></a>
+				<a href=""><p>Partnerships</p></a>
+				<a href=""><p>Business</p></a>
+				<a href=""><p>Ambassadors</p></a>
+				<a href=""><p>Events</p></a>
+			</div>
+			<div class="columna">
+				<a href=""><h2 class="text-uppercase mt-0">learn</h2></a>
+				<a href=""><p>Safety</p></a>
+				<a href=""><p>Blog</p></a>
+				<a href=""><p>Press</p></a>
+				<a href=""><p>Careers</p></a>
+				<a href=""><p>Driver<br>Requirements</p></a>
+				<a href=""><p>Driver Earnings</p></a>
+				<a href=""><p>Driving Jobs</p></a>
+				<a href=""><p>Round up &<br>Donate</p></a>
+			</div>
+		
+			<div class="col-store">
+				<div class="store"> 
+					<img src="assets/images/apple-store.svg" alt="App Store">
+				</div>
+				<div class="store">
+					<img src="assets/images/google-play.png" alt="Google Play">
+				</div>
+				<div class="store">
+					<img src="assets/images/microsoft.png" alt="Microsoft">
+				</div>
+			</div>
 		</div>
-		<div class="june">
-			<h5 class="text-uppercase">watch</h5>
-			<h1 class="text-uppercase">june</h1>
-			<p>In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride — and sharing her life, too.</p>
+
+		<div class="row-redes flex-container">
+			<div class="redes-sociales flex-container">
+
+				<a href="https://twitter.com/lyft"><i class="fa fa-twitter social-icon" aria-hidden="true"></i></a>
+				<a href="https://www.facebook.com/lyft/"><i class="fa fa-facebook social-icon" aria-hidden="true"></i></a>
+				<a href="https://www.instagram.com/lyft/"><i class="fa fa-instagram social-icon" aria-hidden="true"></i></a>
+				
+			</div>
+			<hr>
+			<div class="copyright flex-container">
+				<p>© 2017 Lyft, Inc. <a href="">Terms</a> <a href="">Privacy</a></p>
+			</div>
 		</div>
-	</section>	
-	</<main>	
-	-->
+	</section>
+	</footer>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
